--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "~4.16.0",
     "express-session": "1.9.1",
     "http-errors": "~1.6.2",
+    "markdown": "^0.5.0",
     "mongodb": "2.2.33",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^0.1.8"
   }
 }
