--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.fontSize": 16
+    "editor.fontSize": 16,
+    "editor.renderWhitespace": "all",
+    "editor.cursorStyle": "line-thin"
 }
